# lotsdb

./: .gitignore  CLAUDE.md  FEATURE_CYCLE.md  LICENSE  README.md  external_deps.md  pr-analysis.md  pyproject.toml
.claude/commands/: deploy.md  speckit.overview.md  speckit.uat.md
.specify/memory/: constitution.md
.specify/templates/: uat-report-template.md
docs/reviews/: pr-review-14acc83.md
specs/001-auction-catalog-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-catalog-dropzone/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-spa-shell-layout/: data-model.md  plan.md  pr-4-review.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-shell-interaction-polish/: data-model.md  plan.md  pr-5-review.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-shell-ux-fixes/: data-model.md  plan.md  pr-6-review.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-lots-table-bugfix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-lot-detail-modal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-lots-table-ux-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-pagination-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-access-control/: data-model.md  plan.md  pr-12-review.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-performance-ux/: plan.md  quickstart.md  research.md  (+2 more)
tests/: conftest.py  test_services.py
(+166 files in other folders)
